# OpenCVTutorials

./: .gitignore
Mask_Operations/: CMakeLists.txt  README.md  mat_mask_operations
Mask_Operations/source/: mat_mask_operations.cpp
Scan_Tables_Time/: CMakeLists.txt  README.md  how_to_scan_images  scanTablesTime
Scan_Tables_Time/include/: scanReduce.cpp  scanReduce.hpp
Scan_Tables_Time/source/: main.cpp
